Added boostrap 5 icons and contact icons

--- a/index.html
+++ b/index.html
@@ -108,10 +108,17 @@
 <!-- ======= These doctors are available now Section ======= -->
 <section id="doctors-available" class="doctors-available">
   <div class="container">
-        <div class="section-title">
-          <h2>About doctor</h2> 
-        </div>
-        
+    <div class="row">
+      <div class="col-lg-9">
+        <h2 class="text-green">About Dr Owe</h2>
+        <p>Dr Owe went to undergrad at Cal Poly Pomora and studied animal science</p>
+      </div>
+      <div class="col-lg-3">
+        <a href="" class="btn btn-outline-primary btn-block mb-3"><img src="assets/img/video-icon.jpg" width="20px" height="20px" style="border-radius: 50%;margin-right:5px;" alt=""> Video Consult <b>$45.99</b></a>
+        <a href="" class="btn btn-outline-primary btn-block mb-3"><img src="assets/img/text-icon.jpg" width="20px" height="20px" style="border-radius: 50%;margin-right:5px;" alt=""> Text Consult <b>$25.99</b></a>
+        <a href="" class="btn btn-outline-primary btn-block"><img src="assets/img/call-icon.jpg" width="20px" height="20px" style="border-radius: 50%;margin-right:5px;" alt=""> Audio Consult <b>$25.99</b></a>
+      </div>
+    </div>
   </div>
 </section>
 <!-- End These doctors are available now Section -->
