Fixed mobile design

--- a/index.html
+++ b/index.html
@@ -110,11 +110,17 @@
     <div class="container">
       <div class="doctor-profile-card">
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-md-3">
             <div class="d-profile-sidebar">
-              <img src="assets/img/vet1.webp" width="100%">
-              <h5 class="mb-2 font-weight-bold">Dr Mary Jo Hove, DVM</h5>
-              <small class="text-muted d-block mb-2">24 Years experience in emergency medicine</small>
+              <div class="row">
+                <div class="col-3 pr-custom-0 col-md-12">
+                  <img src="assets/img/vet1.webp" width="100%">
+                </div>
+                <div class="col-9 col-md-12">
+                  <h5 class="mb-2 font-weight-bold">Dr Mary Jo Hove, DVM</h5>
+                  <small class="text-muted d-block mb-2">24 Years experience in emergency medicine</small>
+                </div>
+              </div>
               <div class="doctor-profile-social-icons">
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
@@ -126,7 +132,7 @@
               <a href="" class="btn btn-outline-dark btn-block mt-3">Request appointment</a>
             </div>
           </div>
-          <div class="col-lg-9 pl-lg-0">
+          <div class="col-md-9 pl-lg-0">
             <div class="d-profile-main">
               <h2 class="text-green">About Dr Howe</h2>
               <p>
