Updated tablet design

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li><a class="nav-link scrollto active" href="/Homepage/">Home</a></li>
-            <li><a class="nav-link scrollto" href="">Meet the vet</a></li>
             <li><a class="nav-link scrollto" href="#">Pricing</a></li>
             <li><a class="nav-link scrollto" href="#">About</a></li>
           </ul>
+          <a class="btn btn-outline-dark px-4 py-1 mr-2" href="">Meet the vet</a>
           <i class="bi bi-list mobile-nav-toggle"></i>   
         </nav> 
         <!-- navbar -->
@@ -100,7 +100,7 @@
         <div class="col-lg-9 mx-auto text-center text-white">
           <div class="slider-text-section">
               <h1>Virtual veterinary care</h1>
-              <p>Vide0 | Audio | Chat consultation</p>
+              <p>Video | Audio | Chat consultation</p>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
     <div class="container">
       <div class="doctor-profile-card">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-5 col-lg-3">
             <div class="d-profile-sidebar">
               <div class="row">
                 <div class="col-3 pr-custom-0 col-md-12">
@@ -132,7 +132,7 @@
               <a href="" class="btn btn-outline-dark btn-block mt-3">Request appointment</a>
             </div>
           </div>
-          <div class="col-md-9 pl-lg-0">
+          <div class="col-md-7 col-lg-9 pl-lg-0">
             <div class="d-profile-main">
               <h2 class="text-green">About Dr Howe</h2>
               <p>
@@ -149,9 +149,9 @@
                 Watching a tragic event turn out successfully and giving a pet another at a full life was extremely fulfilling.
               </p>
               <h4 class="text-green">Consult Dr Howe</h4>
-              <a href="" class="btn btn-primary my-1 my-md-0"><i class="bi bi-camera-video mr-1"></i> Video Consult <b>$45.99</b></a>
-              <a href="" class="btn btn-primary ml-lg-2 my-1 my-md-0"><i class="bi bi-chat-dots mr-1"></i> Text Consult <b>$25.99</b></a>
-              <a href="" class="btn btn-primary ml-lg-2 my-1 my-md-0"><i class="bi bi-telephone mr-1"></i> Audio Consult <b>$25.99</b></a>
+              <a href="" class="btn btn-primary my-1 my-lg-0"><i class="bi bi-camera-video mr-1"></i> Video Consult <b>$45.99</b></a>
+              <a href="" class="btn btn-primary ml-lg-2 my-1 my-lg-0"><i class="bi bi-chat-dots mr-1"></i> Text Consult <b>$25.99</b></a>
+              <a href="" class="btn btn-primary ml-lg-2 my-1 my-lg-0"><i class="bi bi-telephone mr-1"></i> Audio Consult <b>$25.99</b></a>
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@
         </div>
         <div class="treat-point">
           <div class="row">
-            <div class="col-lg-6 d-flex treat-point-main">
+            <div class="col-md-6 d-flex treat-point-main">
                 <div class="treat-point-img">
                   <img src="assets/img/proud_cat.png" width="100%" alt="">
                 </div>
@@ -182,7 +182,7 @@
                   <p>Did you just bring home a new kitten? Has your 5 year old dog changed its eating habits?</p>
                 </div>
             </div> 
-            <div class="col-lg-6 d-flex treat-point-main">
+            <div class="col-md-6 d-flex treat-point-main">
                 <div class="treat-point-img">
                   <img src="assets/img/scratchy_dog_brown_2.png" width="100%" alt="">
                 </div>
@@ -191,7 +191,7 @@
                   <p>Itches happen. Luckily, a quick chat with a veterinarian may help you better identify exactly what kind of help your pet will need</p>
                 </div>
             </div> 
-            <div class="col-lg-6 d-flex treat-point-main">
+            <div class="col-md-6 d-flex treat-point-main">
                 <div class="treat-point-img">
                   <img src="assets/img/well_behaved_dog.png" width="100%" alt="">
                 </div>
@@ -200,7 +200,7 @@
                   <p>Let a professional guide you through optimizing the tightest human-animal bond with your pet possible</p>
                 </div>
             </div> 
-            <div class="col-lg-6 d-flex treat-point-main">
+            <div class="col-md-6 d-flex treat-point-main">
                 <div class="treat-point-img">
                   <img src="assets/img/rabbit_eating_sloppy_2.png" width="100%" alt="">
                 </div>
