Updated tablet design

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   <img src="assets/img/vet1.webp" width="100%">
                 </div>
                 <div class="col-9 col-md-12">
-                  <h5 class="mb-2 font-weight-bold">Dr Mary Jo Hove, DVM</h5>
+                  <h5 class="mb-2 font-weight-bold">Dr Mary Jo Howe, DVM</h5>
                   <small class="text-muted d-block mb-2">24 Years experience in emergency medicine</small>
                 </div>
               </div>
