--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <div class="row align-items-center">
         <div class="col-lg-9 mx-auto text-center text-white">
           <div class="slider-text-section">
-              <h1>Virtual veterinary care</h1>
-              <p>Video | Audio | Chat consultation</p>
+              <h1>Virtual Veterinary Care</h1>
+              <p>Video | Audio | Chat Consultations</p>
           </div>
         </div>
       </div>
@@ -140,9 +140,9 @@
                 She has always loved animals and science. Combining the two has allowed her to make her work her passion.
               </p>
               <p>
-                Dr Howe was was the attending veterinarian on an emergency for a pet who was hit by a car in Lakewood California.
-                The patient was a 4-month old yellow lab. He has been driven on by his owner accidentally and his pelvis was shattered.
-                The owner was going to euthanize him but she convinced them to let her adopt him for her own.
+                Dr Howe was the attending veterinarian on an emergency for a pet who was hit by a car in Lakewood California.
+                The patient was a 4-month old yellow lab. He has been driven on by his owners accidentally and his pelvis was shattered.
+                The owners were going to euthanize him but she convinced them to let her adopt him for her own.
               </p>
               <p>
                 With help from a friend who was a great surgeon, they repaired his pelvis. He healed well and went on to live a full life with her.
