Added services section, removed social icons and updated topbar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <h6>Telehealth appnts. available 24/7!</h6>
+        <h6>Dr. How is available now - Book Appointment with Dr. Howe</h6>
       </div>
     </div>
   </div>
@@ -121,14 +121,14 @@
                   <small class="text-muted d-block mb-2">24 Years experience in emergency medicine</small>
                 </div>
               </div>
-              <div class="doctor-profile-social-icons">
+              <!-- <div class="doctor-profile-social-icons">
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-youtube"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-pinterest"></i></a>
-              </div>
+              </div> -->
               <a href="" class="btn btn-outline-dark btn-block mt-3">Request appointment</a>
             </div>
           </div>
@@ -148,7 +148,15 @@
                 With help from a friend who was a great surgeon, they repaired his pelvis. He healed well and went on to live a full life with her.
                 Watching a tragic event turn out successfully and giving a pet another at a full life was extremely fulfilling.
               </p>
-              <h4 class="text-green">Consult Dr Howe</h4>
+              <h4 class="text-green"><b>Service's Offered</b></h4>
+              <p>
+                <b>New Patients (General veterinary advice):</b>
+                Tele-triage, Tele-advice, Skin and irritation issues, Health-Diet-Nutrition, Behavior, New pets, and more..
+              </p>
+              <p>
+                <b>Existing Patients (with VCPR):</b> Diagnosing, Treatment, Prescriptions
+              </p>
+              <h4 class="text-green"><b>Consult Dr Howe</b></h4>
               <a href="" class="btn btn-primary my-1 my-lg-0"><i class="bi bi-camera-video mr-1"></i> Video Consult <b>$45.99</b></a>
               <a href="" class="btn btn-primary ml-lg-2 my-1 my-lg-0"><i class="bi bi-chat-dots mr-1"></i> Text Consult <b>$25.99</b></a>
               <a href="" class="btn btn-primary ml-lg-2 my-1 my-lg-0"><i class="bi bi-telephone mr-1"></i> Audio Consult <b>$25.99</b></a>
