--- a/index.html
+++ b/index.html
@@ -94,18 +94,45 @@
     
     </div>
   </header>
-  <section class="doctor-public-slider">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-9 mx-auto text-center text-white">
-          <div class="slider-text-section">
-              <h1>Virtual Veterinary Care</h1>
-              <p>Video | Audio | Chat Consultations</p>
+  <div id="carouselDoctorSlider" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselDoctorSlider" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselDoctorSlider" data-slide-to="1"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <section class="doctor-public-slider">
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-lg-9 mx-auto text-center text-white">
+                <div class="slider-text-section">
+                  <img src="assets/img/bird-flying.png" class="slider-text-section-img" alt="">
+                    <h1>Virtual Veterinary Care</h1>
+                    <p>Video | Audio | Chat Consultations</p>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
+        </section>
+      </div>
+      <div class="carousel-item">
+        <section class="doctor-public-slider">
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-lg-9 mx-auto text-center text-white">
+                <div class="slider-text-section">
+                  <img src="assets/img/bird-flying.png" class="slider-text-section-img" alt="">
+                    <h1>Virtual Veterinary Care</h1>
+                    <p>Video | Audio | Chat Consultations</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
-  </section>
+  </div>
+  
   <section class="doctor-profile">
     <div class="container">
       <div class="doctor-profile-card">
