Updated menu items

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <h6>Dr. How is available now - Book Appointment with Dr. Howe</h6>
+        <h6>Dr. How is available now</h6>
       </div>
     </div>
   </div>
@@ -56,11 +56,11 @@
         <a href="index.html" class="logo"><img src="assets/img/logo_main.png" alt="" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="/Homepage/">Home</a></li>
+            <li><a class="nav-link scrollto" href="#">Book Appointment with Dr. Howe</a></li>
             <li><a class="nav-link scrollto" href="#">Pricing</a></li>
             <li><a class="nav-link scrollto" href="#">About</a></li>
           </ul>
-          <a class="btn btn-outline-dark px-4 py-1 mr-2" href="">Meet the vet</a>
+          <a class="btn btn-outline-dark px-4 py-1 mr-2" href="">Book Appointment</a>
           <i class="bi bi-list mobile-nav-toggle"></i>   
         </nav> 
         <!-- navbar -->
@@ -71,8 +71,7 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <div class="pc-nav">
             <ul>
-              <li><a class="nav-link scrollto active" href="/Homepage/">Home</a></li>
-              <li><a class="nav-link scrollto active" href="">Meet the vet</a></li>
+              <li><a class="nav-link scrollto active" href="/Homepage/">Book Appointment with Dr. Howe</a></li>
             </ul>
           </div>  
           
