Updated flying bird image

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="row align-items-center">
               <div class="col-lg-9 mx-auto text-center text-white">
                 <div class="slider-text-section">
-                  <img src="assets/img/bird-flying.png" class="slider-text-section-img" alt="">
+                  <img src="assets/img/bird-flying-1.png" class="slider-text-section-img" alt="">
                     <h1>Virtual Veterinary Care</h1>
                     <p>Video | Audio | Chat Consultations</p>
                 </div>
