Added working hours

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="col-lg-9 mx-auto text-center text-white">
                 <div class="slider-text-section">
                   <img src="assets/img/bird-flying.png" class="slider-text-section-img" alt="">
-                    <h1>Virtual Veterinary Care</h1>
+                    <h1>Dr Mary Jo Howe's <br> Virtual Veterinary Care</h1>
                     <p>Video | Audio | Chat Consultations</p>
                 </div>
               </div>
@@ -121,7 +121,7 @@
               <div class="col-lg-9 mx-auto text-center text-white">
                 <div class="slider-text-section">
                   <img src="assets/img/bird-flying-1.png" class="slider-text-section-img" alt="">
-                    <h1>Virtual Veterinary Care</h1>
+                    <h1>Dr Mary Jo Howe's <br> Virtual Veterinary Care</h1>
                     <p>Video | Audio | Chat Consultations</p>
                 </div>
               </div>
@@ -155,7 +155,7 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-pinterest"></i></a>
               </div> -->
-              <a href="" class="btn btn-outline-dark btn-block mt-3">Request appointment</a>
+              <a href="" class="btn btn-outline-dark btn-block mt-3">Book appointment</a>
             </div>
           </div>
           <div class="col-md-7 col-lg-9 pl-lg-0">
@@ -200,51 +200,32 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <!-- main-title -->
-        <div class="section-title-l">
-          <h2>What we treat</h2> 
-          <p>Real relief for a variety of animals</p>
-        </div>
-        <div class="treat-point">
+        <h2>Connect with a Veterinary Expert, Virtually.</h2> 
+        <p>Save your pet the stress of visiting the unfamiliar and
+          sometimes stressfull enviornment of an animal hospital.
+          Not to mention, A virtual consultation has the potential to save
+          you, the pet owner, time and money. Get the peace of mind and
+          knowledge you’ll need to be the best parent possible.
+          Dr. Howe is excited to meet your pet and provide the
+          best virtual care and advice available.</p>
           <div class="row">
-            <div class="col-md-6 d-flex treat-point-main">
-                <div class="treat-point-img">
-                  <img src="assets/img/proud_cat.png" width="100%" alt="">
-                </div>
-                <div class="treat-point-text">
-                  <h5>Wellness Care or health</h5>
-                  <p>Did you just bring home a new kitten? Has your 5 year old dog changed its eating habits?</p>
-                </div>
-            </div> 
-            <div class="col-md-6 d-flex treat-point-main">
-                <div class="treat-point-img">
-                  <img src="assets/img/scratchy_dog_brown_2.png" width="100%" alt="">
-                </div>
-                <div class="treat-point-text">
-                  <h5>Ear + Skin Itching</h5>
-                  <p>Itches happen. Luckily, a quick chat with a veterinarian may help you better identify exactly what kind of help your pet will need</p>
-                </div>
-            </div> 
-            <div class="col-md-6 d-flex treat-point-main">
-                <div class="treat-point-img">
-                  <img src="assets/img/well_behaved_dog.png" width="100%" alt="">
-                </div>
-                <div class="treat-point-text">
-                  <h5>Behavior</h5>
-                  <p>Let a professional guide you through optimizing the tightest human-animal bond with your pet possible</p>
-                </div>
-            </div> 
-            <div class="col-md-6 d-flex treat-point-main">
-                <div class="treat-point-img">
-                  <img src="assets/img/rabbit_eating_sloppy_2.png" width="100%" alt="">
-                </div>
-                <div class="treat-point-text">
-                  <h5>Nutrition</h5>
-                  <p>Swelling, redness, odors? Let a doctor talk you through the steps you need to take</p>
-                </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="doctor-profile-card bg-dark text-white p-4 mt-3">
+                <h4 class="text-green"><b>Hours</b></h4>
+                <ul class="list-unstyled">
+                  <li class="mb-1"><b>Mon:</b> 5pm - 11pm</li>
+                  <li class="mb-1"><b>Tue:</b> 5pm - 11pm</li>
+                  <li class="mb-1"><b>Wed:</b> 5pm - 11pm</li>
+                  <li class="mb-1"><b>Thurs:</b> 5pm - 11pm</li>
+                  <li class="mb-1"><b>Fri:</b> 11am - 11pm</li>
+                  <li class="mb-1"><b>Sat:</b> 11am - 11pm</li>
+                  <li class="mb-1"><b>Sun:</b> 11am - 11pm</li>
+                </ul>
+              <a href="" class="btn btn-outline-light btn-block mt-3">Book appointment</a>
+
+              </div>
             </div>
           </div>
-        </div>
       </div>
       <div class="col-lg-4">
         <div class="appointment-form">
