Added working hours

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <a href="index.html" class="logo"><img src="assets/img/logo_main.png" alt="" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto" href="#">Book Appointment with Dr. Howe</a></li>
+            <li><a class="nav-link scrollto" href="/pet_appointment/">Book Appointment with Dr. Howe</a></li>
             <li><a class="nav-link scrollto" href="#">Pricing</a></li>
             <li><a class="nav-link scrollto" href="#">About</a></li>
           </ul>
-          <a class="btn btn-outline-dark px-4 py-1 mr-2" href="">Book Appointment</a>
+          <a class="btn btn-outline-dark px-4 py-1 mr-2" href="/pet_appointment/">Book Appointment</a>
           <i class="bi bi-list mobile-nav-toggle"></i>   
         </nav> 
         <!-- navbar -->
@@ -71,7 +71,7 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <div class="pc-nav">
             <ul>
-              <li><a class="nav-link scrollto active" href="/Homepage/">Book Appointment with Dr. Howe</a></li>
+              <li><a class="nav-link scrollto active" href="/pet_appointment/">Book Appointment with Dr. Howe</a></li>
             </ul>
           </div>  
           
@@ -155,7 +155,7 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-pinterest"></i></a>
               </div> -->
-              <a href="" class="btn btn-outline-dark btn-block mt-3">Book appointment</a>
+              <a href="/pet_appointment/" class="btn btn-outline-dark btn-block mt-3">Book appointment</a>
             </div>
           </div>
           <div class="col-md-7 col-lg-9 pl-lg-0">
@@ -221,7 +221,7 @@
                   <li class="mb-1"><b>Sat:</b> 11am - 11pm</li>
                   <li class="mb-1"><b>Sun:</b> 11am - 11pm</li>
                 </ul>
-              <a href="" class="btn btn-outline-light btn-block mt-3">Book appointment</a>
+              <a href="/pet_appointment/" class="btn btn-outline-light btn-block mt-3">Book appointment</a>
 
               </div>
             </div>
