Added working hours

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <h2>Connect with a Veterinary Expert, Virtually.</h2> 
+        <h2 class="text-green">Connect with a Veterinary Expert, Virtually.</h2> 
         <p>Save your pet the stress of visiting the unfamiliar and
           sometimes stressfull enviornment of an animal hospital.
           Not to mention, A virtual consultation has the potential to save
