Updated hours card margin

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           best virtual care and advice available.</p>
           <div class="row">
             <div class="col-md-6 col-lg-4">
-              <div class="doctor-profile-card bg-dark text-white p-4 mt-3">
+              <div class="doctor-profile-card bg-dark text-white p-4 my-3">
                 <h4 class="text-green"><b>Hours</b></h4>
                 <ul class="list-unstyled">
                   <li class="mb-1"><b>Mon:</b> 5pm - 11pm</li>
