Updated hours card margin

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
           Dr. Howe is excited to meet your pet and provide the
           best virtual care and advice available.</p>
           <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="doctor-profile-card bg-dark text-white p-4 my-3">
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="doctor-profile-card bg-dark text-white p-4 mt-3">
                 <h4 class="text-green"><b>Hours</b></h4>
                 <ul class="list-unstyled">
                   <li class="mb-1"><b>Mon:</b> 5pm - 11pm</li>
