--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="mobile-nav-tab align-items-center">
         <!-- navbar mobile -->
-        <a href="index.html" class="logo"><img src="assets/img/logo_main.png" alt="" class="img-fluid"></a>
+        <a href="index.html" class="logo"><img src="assets/img/mary-howe.png" alt="" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li><a class="nav-link scrollto" href="/pet_appointment/">Book Appointment with Dr. Howe</a></li>
@@ -76,7 +76,7 @@
           </div>  
           
           <div class="logo-img">
-            <a href="index.html" class="logo"><img src="assets/img/logo_main.png" alt="" class="img-fluid"></a>
+            <a href="index.html" class="logo"><img src="assets/img/mary-howe.png" alt="" class="img-fluid"></a>
           </div>  
             
           <div class="pc-nav">
@@ -224,6 +224,9 @@
               <a href="/pet_appointment/" class="btn btn-outline-light btn-block mt-3">Book appointment</a>
 
               </div>
+            </div>
+            <div class="col-lg-6 mb-3">
+              <img src="assets/img/mary-howe.png" alt="" class="img-fluid">
             </div>
           </div>
       </div>
