--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               </div>
             </div>
             <div class="col-lg-6 mb-3">
-              <img src="assets/img/mary-howe.png" alt="" class="img-fluid">
+              <img src="assets/img/mary-howe.png" alt="" width="100%">
             </div>
           </div>
       </div>
